--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,6 +12,8 @@
     <td><%= task.content %></td>
 
     <td><%= link_to '詳細', task_path(task.id)%></td>
+    <td><%= link_to '編集', edit_task_path(task.id), data: {confirm: '本当にタスクを編集してよろしいですか？'} %></td>
+    <td><%= link_to '削除', task_path(task.id), method: :delete, data: {confirm: '本当にタスクを削除してよろしいですか？'}%></td>
   </tr>
 <% end %>
 </table>
