--- a/app/views/tasks/confirm.html.erb
+++ b/app/views/tasks/confirm.html.erb
@@ -2,9 +2,15 @@
 <%= form_with(model: @task,url: tasks_path, local: true) do |form| %>
   <%= form.hidden_field :name %>
   <%= form.hidden_field :content %>
+  <%= form.hidden_field :deadline %>
+  <%= form.hidden_field :status %>
+  <%= form.hidden_field :priority %>
 
   <p>タスク:<%= @task.name %></p>
   <p>内容:<%= @task.content %></p>
+  <p>終了期限:<%= @task.deadline %></p>
+  <p>ステータス:<%= @task.status %></p>
+  <p>優先度:<%= @task.priority %></p>
   <%= form.submit  "登録する" %>
   <%= form.submit  "戻る", name: 'back' %>
 <% end %>
