system spce実装、kaminari導入

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <h1>タスク管理一覧</h1>
 <p><%= notice %></p>
 <div class = "container-fluid">
-    <li>タスク検索<%= form_with(model: Task.new, method: :get, local: true, url: tasks_path) do |form| %>
+    <li>タスク検索<%= form_with(model: Task.new, method: :get, local: true) do |form| %>
       <%= form.text_field :name %>
     </li>
     <li>ステータス検索</li>
@@ -38,3 +38,4 @@
 <td><%= link_to '終了期限で並び替える',tasks_path(sort_expired: "true")%></td><br>
 <td><%= link_to '優先度で並び替える',tasks_path(sort_priority: "true")%></td><br>
 <%= link_to '新規タスク作成', new_task_path %>
+<%= paginate @tasks %>
