--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -22,7 +22,7 @@
 
   <div class="task_deadline">
     <%= form.label :deadline %>
-    <%= form.date_field :deadline%>
+    <%= form.text_field :deadline%>
   </div>
 
   <div class="task_status">
