--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,22 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <header>
+    <h1 class="title">PictureSharing</h1>
+    <nav class="nav">
+      <ul class="menu-group">
+        <li class="menu-item"><a href="#">項目1</a></li>
+        <li class="menu-item"><a href="#">項目2</a></li>
+        <li class="menu-item"><a href="#">項目3</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <body>
     <%= yield %>
   </body>
+
+  <footer>
+    <%= 202303  %>
+  </footer>
 </html>
