--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,10 +7,10 @@
     <li>ステータス検索</li>
     <li><%= form.select :status, [["未着手", "0"], ["着手中", "1"], ["完了", "2"]], include_blank: "選択して下さい" %></li>  
     <li>
-      <button type="button" class="btn btn-lg btn-primary"><%= form.submit '検索', name: nil %></button>
+      <button type="button" class="btn btn-dark"><%= form.submit '検索', name: nil %>
     </li>  
       <% end %> 
-  </ul>
+    </li>
 </div>
 
 <table>
@@ -40,4 +40,3 @@
 <td><%= link_to '終了期限で並び替える',tasks_path(sort_expired: "true")%></td><br>
 <td><%= link_to '優先度で並び替える',tasks_path(sort_priority: "true")%></td><br>
 <%= link_to '新規タスク作成', new_task_path %>
-<%= paginate @tasks %>
