--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,29 @@
   </head>
 
   <header>
-    <h1 class="title">PictureSharing</h1>
+    <h1 class="title">Task</h1>
     <nav class="nav">
       <ul class="menu-group">
-        <li class="menu-item"><a href="#">項目1</a></li>
-        <li class="menu-item"><a href="#">項目2</a></li>
-        <li class="menu-item"><a href="#">項目3</a></li>
+        <li class="menu-item"><a href="#">Task1</a></li>
+        <li class="menu-item"><a href="#">Task2</a></li>
+        <li class="menu-item"><a href="#">Task3</a></li>
       </ul>
     </nav>
   </header>
 
   <body>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+
+    <% if logged_in? %>
+      <%= link_to "プロフィール", user_path(current_user.id) %>
+      <%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
+    <% else %>
+      <%= link_to "サインアップ", new_user_path %>
+      <%= link_to "ログイン", new_session_path %>
+    <% end %>
+
     <%= yield %>
   </body>
 
