taskの一覧画面に管理者画面にいくリンク作成のため

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,5 +24,8 @@
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
 
+  <%= f.label :admin %>
+  <%= f.check_box :admin %>
+
   <%= f.submit "アカウントを作成します" %>
 <% end %>
