--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -41,7 +41,8 @@
 </table>
 <td><%= link_to '終了期限で並び替える',tasks_path(sort_expired: "true")%></td><br>
 <td><%= link_to '優先度で並び替える',tasks_path(sort_priority: "true")%></td><br>
-<%= link_to '新規タスク作成', new_task_path %>
+<%= link_to '新規タスク作成', new_task_path %><br>
+<%= link_to '管理者画面へ',admin_users_path %>
 <%= paginate @tasks %>
 
 
