--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,9 @@
 <h1>タスク詳細画面</h1>
 <p>タスク名: <%= @task.name %></p>
 <p>タスク内容: <%= @task.content %></p>
+<p>ラベル
+  <% @labels.each do |tag| %>
+    <%= tag.label_name %>
+  <% end %>
+</p>
 <%= link_to 'タスク一覧画面へ', tasks_path %>
